Fixed overflow animation

--- a/src/containers/Projects/BurgerProject/BurgerProject.css
+++ b/src/containers/Projects/BurgerProject/BurgerProject.css
@@ -1,6 +1,6 @@
 .BurgerAnimation {
   padding: 2em 1.5em;
-  font-size: 3em;
+  font-size: 2.5em;
   text-align: center;
 }
 .BurgerAnimation span {
@@ -82,6 +82,9 @@
 }
 
 @media (min-width: 1025px) {
+  .BurgerAnimation {
+    font-size: 3em;
+  }
   .BurgerImageLogo {
     width: 50%;
     height: 50%;
@@ -96,5 +99,10 @@
   }
   .BurgerPhotosParagraph {
     font-size: 1.5em;
+  }
+}
+@media (max-width: 375px) {
+  .BurgerAnimation {
+    font-size: 2em;
   }
 }
